# ocean

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  .yamlignore  .yamllint.yaml  AWS_DOCS_MCP_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_TESTS.md  INTEGRATION_TEST_PLAN.md  MEMORY_OPTIMIZATION.md  Makefile  README.md  SECURITY.md  config_example.yaml  github_client.py  main.py  memory_test_results.json  perf-test-results-perf-24022.log.md  perf-test-results-perf-25123.log.md  profiler.py  pyproject.toml  renovate.json  requirements.txt  run.py
docs/api-docs/: Makefile  mkdocs.yml  pyproject.toml
docs/api-docs/src/: index.md  release-notes.md
integrations/azure/: CHANGELOG.md  README.md  config.yaml  debug.py  integration.py  main.py  pyproject.toml  sonar-project.properties
integrations/azure/.port/: spec.yaml
integrations/azure/azure_integration/: azure_patch.py  exceptions.py  iterators.py  ocean.py  overrides.py  utils.py
integrations/azure/changelog/: 1.feature.md  1.improvement.2.md  1.improvement.md  PORT-4527.improvement.md
integrations/azure/tests/: conftest.py
integrations/backstage/: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  client.py  integration.py  kinds.py  main.py  pyproject.toml  sonar-project.properties
integrations/backstage/.port/: spec.yaml
integrations/backstage/changelog/: 1424.feature
integrations/backstage/tests/: conftest.py  test_sanity.py
integrations/bit_bucket/: main.py  pyproject.toml  pytest.ini
integrations/bit_bucket/bit_bucket_integration/: auth.py  config.py  integration.py  webhook.py
integrations/bit_bucket/tests/: test_auth.py  test_integration.py  test_webhook.py
integrations/bitbucket-ocean/: config.yaml  pyproject.toml  pytest.ini  requirements.txt
integrations/bitbucket-ocean/bitbucket_ocean/: auth.py  config.py  integration.py  main.py  webhook.py
integrations/bitbucket-ocean/tests/: test_auth.py  test_integration.py  test_webhook.py
integrations/fivetran-connector/: .gitignore  CHANGELOG.md  integration.py  main.py  pyproject.toml
integrations/fivetran-connector/.port/: spec.yaml
integrations/fivetran-connector/fivetran_connector/: client.py
integrations/fivetran-connector/tests/: test_client.py
integrations/gitlab/: .env.example  CHANGELOG.md  Dockerfile  README.md  config.py  config.yaml  create_app.py  debug.py  integration.py  leak.py  main.py  mock.py  pyproject.toml  sonar-project.properties  test.py
integrations/gitlab-app/: Makefile  README.md  create_app.py  example.config.yaml  integration.py  main.py  pyproject.toml
integrations/gitlab-app/.port/: spec.yaml
integrations/gitlab-app/gitlabapp/: bootstrap.py  integration.py  ocean.py  ocean_helper.py  utils.py
integrations/gitlab/.port/: spec.yaml
integrations/gitlab/changelog/: .gitignore  0.1.101.improvement.md  1.bugfix.md  1.feature.md  1.improvement.md  2.feature.md  PORT-4325.bugfix.md  PORT-4327.feature.md  PORT-4380.improvement.md  PORT-4527.improvement.md  PORT-4555.improvement.md  PORT-4930.improvement.md  PORT-5028.bugfix.md  PORT-7140.feature.md  PORT-7141.feature.md  PORT-7417.feature.md  PORt-4930.improvement.1.md  update-config-ocean-0-1-2.bump.md  v0.1.2.bump.md
integrations/gitlab/changelog_fragments/: PORT-4307.feature.md
integrations/gitlab/gitlab_integration/: bootstrap.py  custom_integration.py  errors.py  executor.py  git_integration.py  gitlab_service.py  integration.py  models.py  ocean.py  ocean_helper.py  overrides.py  utils.py
integrations/gitlab/raw_data_dumps/: from_snowflake.json  raw_data_project_48056fcb-9703-4f42-ac49-4856f80aaefe_20251019_115652_930.json
integrations/harbor/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MakeFile  Makefile  README.md  SETUP_GUIDE.md  SUBMISSION.md  client.py  config.yaml  constants.py  initialize_client.py  initializer.py  integration.py  kinds.py  main.py  pyproject.toml  pytest.ini  quick-start.sh  requirements.txt  sonar-project.properties
integrations/harbor/.port/: spec.yaml
integrations/harbor/_compat/: httpx_stub.py
integrations/harbor/core/: client.py  webhook_handler.py
integrations/harbor/examples/: config.sample.yaml  mappings.yaml
integrations/harbor/exporters/: __init__.py  artifacts.py  projects.py  repositories.py  users.py
integrations/harbor/harbor/: __init__.py  client.py  constants.py  initializer.py  utils.py
integrations/harbor/harbor_integration/: client.py  config.py  integration.py
integrations/harbor/logging_utils/: __init__.py  structured.py
integrations/harbor/mappers/: __init__.py  artifacts.py  projects.py  repositories.py  users.py
integrations/harbor/models/: __init__.py  harbor_types.py  port_entities.py
integrations/harbor/ocean_env/: pyvenv.cfg
integrations/harbor/scripts/: test_integration.py  validate_harbor_integration.py
integrations/harbor/terraform/: .terraform.lock.hcl  README.md  blueprints.tf  main.tf  secrets.tfvars.example  variables.tf
integrations/harbor/tests/: README.md  __init__.py  conftest.py  py.ini  test_artifacts_exporter.py  test_client.py  test_client_pagination.py  test_e2e_integration.py  test_exporters.py  test_harbor.py  test_harbor_client.py  test_helpers.py  test_initialize_client.py  test_integration.py  test_logging.py  test_mappers.py  test_processors.py  test_projects_exporter.py  test_rate_limiter.py  test_sample.py  (+7 more)
integrations/jenkins/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  client.py  config.yaml  debug.py  integration.py  kinds.py  main.py  overrides.py  pyproject.toml  sonar-project.properties  utils.py
integrations/pager_duty/: Dockerfile  Makefile  example.config.yaml  integration.py  main.py  project.toml  pyproject.toml  registry.yaml  spec.yaml
integrations/slack/: Dockerfile  README.md  client.py  config.yaml  main.py  pyproject.toml
integrations/snyk/: .env.example  CHANGELOG.md  IntegrationKind.py  Makefile  README.md  config.yaml  initialize_client.py  integration.py  kinds.py  main.py  pyproject.toml  sonar-project.properties
(+5670 files in other folders)
