[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit_bucket-**"
version = "0.1.0"
description = "Bitbucket integration for Port's Ocean framework"
authors = [{ name = "David Michael", email = "davidlearn27@gmail@gmail.com" }]
dependencies = [
    "port-ocean[cli]",
    "aiohttp",
    "pydantic",
    "asyncio",
    "pyyaml",
    "pytest"
]

[tool.setuptools]
packages = ["bitbucket_ocean"]
