[tool.poetry]
name = "gitlab-app"
version = "0.1.0"
description = "A short description of the project"
authors = ["Yair Siman-Tov <yair@getport.io>"]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^0.6.0"
python-gitlab = "^3.14.0"
pathlib = "^1.0.1"
jsonschema = "^4.17.3"

# Ocean
pydantic = "^1.10.8"
requests = "^2.31.0"
loguru = "^0.7.0"
pyyaml = "^6.0"
werkzeug = "^2.3.4"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
confluent-kafka = "^2.1.1"
httpx = "^0.24.1"
pyjq = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \scripts
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.venv
  |Dockerfile
)/
'''