[tool.poetry]
name = "gitlab-app"
version = "0.1.0"
description = "A short description of the project"
authors = ["Yair Siman-Tov <yair@getport.io>"]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^0.6.0"
python-gitlab = "^3.14.0"
pathlib = "^1.0.1"
jsonschema = "^4.17.3"
port-ocean = { version = "^0.1.0.dev2", extras = ["cli"] }



[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
port-ocean = { path = "../../", extras = ["cli"], develop = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \scripts
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.venv
  |Dockerfile
)/
'''