[tool.poetry]
name = "pager_duty"
version = "0.1.0"
description = "Pager duty integration for port"
authors = ["daniel sinai <daniel@getport.io>"]

[tool.poetry.dependencies]
python = "^3.11"
port_ocean = {extras = ["cli"], version = "^0.1.0.dev0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''