[tool.poetry]
name = "port-ocean-slack"
version = "0.1.0"
description = "Port Ocean integration for Slack"
authors = ["Port"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
